fix provision and duplicate activities

--- a/settings.json
+++ b/settings.json
@@ -12,10 +12,10 @@
     "SourceAppsContainerName": "applications",
     "ScriptFileUri": "https://raw.githubusercontent.com/balteravishay/buzz/master/scripts/install.ps1",
     "TemplateFileUri": "https://raw.githubusercontent.com/balteravishay/buzz/master/scripts/deploy.json",
-    "CommandToExecute": "powershell.exe set-executionpolicy remotesigned & powershell.exe -file install.ps1 -url http://www.google.com",
+    "CommandToExecute": "powershell.exe set-executionpolicy remotesigned & powershell.exe -file install.ps1 -url [YOUR ENDPOINT]",
     "Region": "westeurope",
-    "UserName": "azureuser",
-    "UserPassword": "Qwerty!23456",
+    "NodeUserName": "azureuser",
+    "NodeUserPassword": "Qwerty!23456",
     "MaxVmsInScaleSet": 800,
     "WaitTime": 6,
     "OmsWorkspaceId": "",
